# bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.lowmem.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py  schemas.py
app/api/: wecom.py
app/brain/: __init__.py  deepseek.py  prompts.py
app/core/: config.py  logging.py  security.py
app/db/: models.py  session.py
app/gateways/: wecom.py  wecom_crypto.py
app/memory/: embeddings.py  policy.py  service.py
app/services/: budget_service.py  expense_parser.py  expense_service.py  message_processor.py  pending_action_service.py  reminder_service.py  scheduler.py  search_service.py
app/tools/: __init__.py  base.py  factory.py  registry.py
app/utils/: dates.py
deploy/: README_SERVER.md
tests/: test_budget_service.py  test_deepseek_fallback.py  test_embeddings.py  test_expense_parser.py  test_expense_service_features.py  test_memory_policy.py  test_memory_service_features.py  test_prompts.py  test_reminder_service.py  test_tool_registry.py  test_wecom_crypto.py
