[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wecom-deepseek-assistant"
version = "0.1.0"
description = "A personal WeCom assistant powered by DeepSeek, long-term memory, expenses, reminders, and self-hosted search."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4",
    "asyncpg>=0.29.0",
    "cryptography>=42.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pgvector>=0.3.2",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "redis>=5.0.8",
    "sqlalchemy[asyncio]>=2.0.32",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
